--- a/back/Gemfile
+++ b/back/Gemfile
@@ -27,6 +27,10 @@ gem 'rack-cors'
 gem 'cpf_cnpj'
 gem 'active_model_serializers', '~> 0.10.0'
 
+gem "searchkick", "~> 5.3"
+gem "elasticsearch-rails", "~> 7.2"
+gem "elasticsearch-model", "~> 7.2"
+
 group :development, :test do
   gem 'byebug', platforms: %i[mri mingw x64_mingw]
   gem 'cpf_faker'
