feat: Add Search box for citizens

--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=pgsql
 DATABASE_URL=postgres://database
+ELASTICSEARCH_URL="http://elastic-om30:9200"
+ELASTICSEARCH_HOST="localhost:9200"
