--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - '.env'
   elastic:
     image: elasticsearch:7.12.1
+    volumes:
+      - esdata:/usr/share/elasticsearch/data
     container_name: elastic-om30
     ports:
       - 9200:9200
@@ -45,3 +47,4 @@ services:
 
 volumes:
   db_data:
+  esdata:
